--- a/Cloudents.Spitball/App_Themes/site.less
+++ b/Cloudents.Spitball/App_Themes/site.less
@@ -2,7 +2,7 @@
 @tablet: ~"only screen and (min-width: 530px) and (max-width: 949px)";
 @desktop_1366: ~"only screen and (min-width: 1366px)";
 @tablet_641: ~"only screen and (min-width: 641px) and (max-width: 1365px)";
-@phone: ~"only screen and (min-width: 321px) and (max-width: 640px)";
+@phone: ~"only screen and (max-width: 640px)";
 @gap: 10fr;
 @white-two: #ffffff;
 @white: #eeeeee;
@@ -554,6 +554,9 @@ body {
 			margin: 1em;
 			max-width: 560px;
 
+            a.item-result{
+                text-decoration:none;
+            }
 			.bunner {
 				width: 50px;
 				height: 43px;
