--- a/Cloudents.Spitball/App_Themes/icons.css
+++ b/Cloudents.Spitball/App_Themes/icons.css
@@ -1,4 +1,4 @@
-﻿/*@font-face {
+﻿/*@font-face {tutor-copy
     font-family: 'OpenSans';
     src: url('');
     src: url('OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'), url('OpenSans-Regular-webfont.woff2') format('woff2'), url('OpenSans-Regular-webfont.woff') format('woff'), url('OpenSans-Regular-webfont.ttf') format('truetype'), url('OpenSans-Regular-webfont.svg#open_sansregular') format('svg');
@@ -64,13 +64,13 @@ Single-colored icons can be modified like so:
 .icon-small-logo {
   width: 2.150390625em;
 }
-.icon-tutor-copy {
+.icon-tutor {
   width: 1.3em;
   height: 1.3em;
   top: 20%;
   left: 15%;
 }
-.icon-ask-copy {
+.icon-ask {
   width: 1.412109375em;
 }
 .icon-chat {
