--- a/Cloudents.Spitball/Views/Home/Index.cshtml
+++ b/Cloudents.Spitball/Views/Home/Index.cshtml
@@ -15,9 +15,10 @@
 			<div class="bunner hide_641" ></div>
 		</div>
 
-			<iframe width="100%" height="315"
-					src="https://www.youtube.com/embed/XGSy3_Czz8k"></iframe>
-			<div class="item-result">
+			<iframe width="100%" height="315" ng-show="ctrl.results.video"
+					ng-src="{{ctrl.results.video}}"></iframe>
+        <a class="item-result" ng-href="{{::e.url}}" ng-include="ctrl.resultTemplate()" ng-repeat="(k,e) in ctrl.results.items" target="_blank"></a>
+			@*<div class="item-result">
 				<div class="image"></div>
 				<div class="item-content">
 					<div class="university">
@@ -30,6 +31,9 @@
 					</div>
 				</div>
 				<span class="source credit">Source:Quizlet</span>
-			</div>
+			</div>*@
 	</div>
 </div>
+@{
+    Html.RenderPartial("_commonTemplate");
+}
