--- a/Cloudents.Spitball/Views/Home/_commonTemplate.cshtml
+++ b/Cloudents.Spitball/Views/Home/_commonTemplate.cshtml
@@ -30,13 +30,20 @@
     </a>
 </script>*@
 <script defer type="text/ng-template" id="item-template.html">
-    <div class="image" ng-class="{'no-image':!e.img}"><img width="100%" height="100%" ng-src="{{::e.img}}"/></div>
+    <div class="image color-border-{{ctrl.sec}}" ng-class="{'color-{{ctrl.sec}}':!e.img}"><img ng-if="e.img" width="100%" height="100%" ng-src="{{::e.img}}"/>
+       
+        <div class="default-image">
+            <svg class="icon icon-{{ctrl.sec}}" ng-if="!e.img">
+                <use xlink:href="{{'/App_Themes/Images/icons.svg#icon-'+ctrl.sec}}"></use>
+            </svg>
+        </div>
+    </div>
     <div class="item-content">
         @*<div class="university">
             <div class="description">University of Michigan</div>
             <div class="university-class">Econ 102 / Introductory Microecono…</div>
         </div>*@
-        <h2 class="Text-Style-2">{{::e.title}}</h2>
+        <h2 class="Text-Style-2 color-text-{{ctrl.sec}}">{{::e.title}}</h2>
         <div class="description">
             {{::e.content}}
         </div>
@@ -66,6 +73,52 @@
             <span ng-bind-html="::e.content"></span>
         </div>
     </a>*@
+</script>
+<script defer type="text/ng-template" id="tutor-template.html">
+    <div class="image" ng-class="{'color-{{ctrl.sec}}':!e.img}">
+        <img ng-if="e.img" width="100%" height="100%" ng-src="{{::e.img}}" />
+
+        <div class="default-image">
+            <svg class="icon icon-{{ctrl.sec}}" ng-if="!e.img">
+                <use xlink:href="{{'/App_Themes/Images/icons.svg#icon-'+ctrl.sec}}"></use>
+            </svg>
+        </div>
+    </div>
+    <div class="item-content">
+        @*<div class="university">
+                <div class="description">University of Michigan</div>
+                <div class="university-class">Econ 102 / Introductory Microecono…</div>
+            </div>*@
+        <h2 class="Text-Style-2">{{::e.title}}</h2>
+        <div class="description">
+            {{::e.content}}
+        </div>
+    </div>
+    <span class="source credit">Source:{{e.source}}</span>
+    @*<a class="clearfix item item-template" ng-href="{{::e.url}}">
+            <div class="base">
+                <div class="item-ratio">
+                    <div class="content">
+                        <img class="img-responsive" ng-src="{{e.thumbnail}}" width="368" height="520" alt="{{::e.nameExtension}}" />
+                        <div class="extra" id="drag{{::$index}}">
+                            <h2 class="multi-line-ellipsis" dir="auto" ng-bind-html="::e.nameExtension"></h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="stats" ng-hide="::e.numOfViews == undefined">
+                    <div class="views">
+                        {{::e.numOfViews}} <md-icon md-svg-icon="b:eye"></md-icon>
+                    </div>
+                    <div class="likes">
+                        {{::e.likes}} <md-icon md-svg-icon="b:like"></md-icon>
+                    </div>
+                </div>
+            </div>
+            <div class="extra-details">
+                <h5 ng-bind-html="::e.name"></h5>
+                <span ng-bind-html="::e.content"></span>
+            </div>
+        </a>*@
 </script>
 @*<script defer type="text/ng-template" id="quiz-template.html">
     <a class="quiz quiz-template" ng-href="{{::e.url}}">
