--- a/Cloudents.Core.Spitball/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Core.Spitball/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
+<!DOCTYPE html>
 
 <html>
 <head>
@@ -8,6 +9,7 @@
         <link href="~/css/site.css" rel="stylesheet" />
 
     </environment>
+    @Html.Raw(JavaScriptSnippet.FullScript)
 </head>
 <body>
 <div>
