--- a/Cloudents.Spitball/Views/Home/Index.cshtml
+++ b/Cloudents.Spitball/Views/Home/Index.cshtml
@@ -4,16 +4,19 @@
 
 <div>
 	<h1>I’ve come to the conclusion that the answer is: 9 meters</h1>
-	<div grid>
-		<div inline-flex class="options"  ng-show="ctrl.options.filter.length">
-			<input ng-checked="i==0" ng-click="ctrl.sublist = v.data" ng-repeat-start="(i,v) in ctrl.options.filter" id="option{{i}}" type="radio" value="{{v.name}}" ng-model="ctrl.filter" name="filter1"><label for="option{{i}}" ng-repeat-end>{{v.name}}</label>
-			<span class="line"></span><input ng-checked="k==0"  ng-repeat-start="(k,f) in ctrl.options.sort" id="sort{{k}}" type="radio" value="{{f.code}}" ng-model="ctrl.sort" name="sort"><label for="sort{{k}}" ng-repeat-end>{{f.name}}</label>
-			<div class="bunner hide_641" ></div>
-		</div>
-		<div class="options-val" inline-flex ng-show="ctrl.sublist.length">
-			<input ng-repeat-start="(j,c) in ctrl.sublist" id="class{{j}}" type="radio" name="sub-filter" value="{{c.code}}"><label for="class{{j}}" ng-repeat-end>{{c.name}}</label>
-			<div class="bunner hide_641" ></div>
-		</div>
+	<div>
+        <div class="sub-filter">
+            <div inline-flex class="options" ng-show="ctrl.options.filter.length">
+                <input ng-checked="i==0" ng-click="ctrl.sublist = v.data" ng-repeat-start="(i,v) in ctrl.options.filter" id="option{{i}}" type="radio" value="{{v.name}}" ng-model="ctrl.filter" name="filter1"><label class="capitalize" for="option{{i}}" ng-repeat-end>{{v.name}}</label>
+                <span class="line"></span><input ng-checked="k==0" ng-repeat-start="(k,f) in ctrl.options.sort" id="sort{{k}}" type="radio" value="{{f.code}}" ng-model="ctrl.sort" name="sort"><label class="capitalize" for="sort{{k}}" ng-repeat-end>{{f.name}}</label>
+                <div class="bunner hide_641"></div>
+            </div>
+            <div class="options-val" inline-flex ng-show="ctrl.sublist.length">
+                <input ng-repeat-start="(j,c) in ctrl.sublist" id="class{{j}}" type="radio" name="sub-filter" value="{{c.code}}"><label for="class{{j}}" class="capitalize" ng-repeat-end>{{c.name}}</label>
+                <div class="bunner hide_641"></div>
+            </div>
+        </div>
+
 
 			<iframe width="100%" height="315" ng-show="ctrl.results.video"
 					ng-src="{{ctrl.results.video}}"></iframe>
