--- a/Cloudents.Core.Spitball/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Core.Spitball/Views/Shared/_Layout.cshtml
@@ -6,24 +6,28 @@
     <title>@ViewBag.Title</title>
     <environment include="Development">
         <link href="~/css/site.css" rel="stylesheet" />
-
     </environment>
-    @Html.Raw(JavaScriptSnippet.FullScript)
+    <environment names="Staing,Production">
+        <link href="~/css/site.min.css" rel="stylesheet" asp-append-version="true" />
+    </environment>
+        @Html.Raw(JavaScriptSnippet.FullScript)
 </head>
 <body>
 <div>
     @RenderBody()
-</div>
+</div>    
 <environment names="Development">
-    <script src="~/lib/angular/angular.js"></script>
-    <script src="~/scripts/app.js"></script>
+    <script src="~/lib/angular/angular.js" defer></script>
+    <script src="~/scripts/initAngular.js" defer></script>
+    <script src="~/scripts/app.js" defer></script>
 </environment>
 <environment names="Staing,Production">
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"
             asp-fallback-src="~/lib/angular/angular.js"
-            asp-fallback-test="window.angular">
+            asp-fallback-test="window.angular" defer="true">
         
     </script>
+    <script src="~/scripts/site.min.js" asp-append-version="true" defer></script>
 </environment>
 </body>
 </html>
